添加 一堆功能

--- a/src/main/resources/static/front/index.html
+++ b/src/main/resources/static/front/index.html
@@ -408,7 +408,7 @@
                 if(this.setMealDialog.show){
                   item.number = res.data.number
                 }
-                this.getCartData()
+                await this.getCartData()
               }else{
                 this.$notify({ type:'warning', message:res.msg});
               }
@@ -434,7 +434,7 @@
                 if(this.setMealDialog.show){
                   item.number = (res.data.number === 0 ? undefined : res.data.number)
                 }
-                this.getCartData()
+                await this.getCartData()
                 }else{
                   this.$notify({ type:'warning', message:res.msg});
                 }
